deployments/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    env: dev
    app: kuberrest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
